# diplom

./: .gitattributes  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml  pytest.ini
budget/: forms.py  models.py  urls.py  views.py
budget/fixtures/: initial_currencies.json
budget/migrations/: 0001_initial.py  0002_category_color.py  0003_recurringtransaction.py  0004_currency_transaction_amount_base_and_more.py  0005_recurringtransaction_currency.py  0006_alter_recurringtransaction_currency.py  0007_budget_currency.py  0008_alter_transaction_amount_base_and_more.py  0009_monthlybudget.py  0010_userpreferences.py
budget/templatetags/: budget_extras.py
budget/tests/: test_auth.py  test_forms.py  test_models.py  test_template_filters.py  test_views.py
finance_manager/: settings.py  urls.py
templates/: base.html
templates/budget/: add_budget.html  add_category.html  add_monthly_budget.html  add_transaction.html  analytics.html  budget_settings.html  dashboard.html  delete_recurring.html  edit_monthly_budget.html  import_csv.html  monthly_summary.html  recurring_transactions.html  transaction_form.html  transactions_list.html
templates/registration/: logged_out.html  login.html  register.html
